ai_robot_ws/log/build_2025-11-15_04-40-32/ai_robot_hardware_drivers/stdout_stderr.log
running egg_info
creating ../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info
writing ../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info/PKG-INFO
writing dependency_links to ../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info/dependency_links.txt
writing entry points to ../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info/entry_points.txt
writing requirements to ../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info/requires.txt
writing top-level names to ../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info/top_level.txt
writing manifest file '../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info/SOURCES.txt'
reading manifest file '../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info/SOURCES.txt'
writing manifest file '../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info/SOURCES.txt'
running build
running build_py
creating /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build
creating /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib
creating /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers
copying ai_robot_hardware_drivers/esp8266_bridge_node.py -> /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers
copying ai_robot_hardware_drivers/kinect_interface_node.py -> /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers
copying ai_robot_hardware_drivers/audio_interface_node.py -> /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers
copying ai_robot_hardware_drivers/__init__.py -> /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers
copying ai_robot_hardware_drivers/ir_sensor_node.py -> /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers
running install
running install_lib
creating /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers
copying /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers/esp8266_bridge_node.py -> /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers
copying /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers/kinect_interface_node.py -> /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers
copying /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers/audio_interface_node.py -> /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers
copying /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers/__init__.py -> /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers
copying /home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/build/lib/ai_robot_hardware_drivers/ir_sensor_node.py -> /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers
byte-compiling /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers/esp8266_bridge_node.py to esp8266_bridge_node.cpython-310.pyc
byte-compiling /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers/kinect_interface_node.py to kinect_interface_node.cpython-310.pyc
byte-compiling /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers/audio_interface_node.py to audio_interface_node.cpython-310.pyc
byte-compiling /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers/ir_sensor_node.py to ir_sensor_node.cpython-310.pyc
running install_data
creating /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/share/ament_index
creating /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/share/ament_index/resource_index
  File "/home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers/ir_sensor_node.py", line 109
    left_
         ^
SyntaxError: expected 'except' or 'finally' block

creating /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/share/ament_index/resource_index/packages
copying resource/ai_robot_hardware_drivers -> /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/share/ament_index/resource_index/packages
copying package.xml -> /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/share/ai_robot_hardware_drivers
creating /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/share/ai_robot_hardware_drivers/launch
copying launch/hardware_bringup.launch.py -> /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/share/ai_robot_hardware_drivers/launch
creating /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/share/ai_robot_hardware_drivers/config
copying config/hardware_params.yaml -> /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/share/ai_robot_hardware_drivers/config
running install_egg_info
Copying ../../build/ai_robot_hardware_drivers/ai_robot_hardware_drivers.egg-info to /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/python3.10/site-packages/ai_robot_hardware_drivers-1.0.0-py3.10.egg-info
running install_scripts
Installing audio_interface_node script to /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/ai_robot_hardware_drivers
Installing esp8266_bridge_node script to /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/ai_robot_hardware_drivers
Installing ir_sensor_node script to /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/ai_robot_hardware_drivers
Installing kinect_interface_node script to /home/sex/Synapse/ai_robot_ws/install/ai_robot_hardware_drivers/lib/ai_robot_hardware_drivers
writing list of installed files to '/home/sex/Synapse/ai_robot_ws/build/ai_robot_hardware_drivers/install.log'
